// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppDApplications should render AppDApplications with multiInputType Select 1`] = `
<div>
  <div
    class="bp3-form-group applicationDropdown"
  >
    <label
      class="bp3-label"
      for="appdApplication"
    >
      cv.healthSource.connectors.AppDynamics.applicationLabel
       
      <span
        class="bp3-text-muted"
      />
    </label>
    <div
      class="bp3-form-content"
    >
      <div
        class="Layout--horizontal StyledProps--main MultiTypeInput--main"
      >
        <div
          class="bp3-popover-wrapper MultiTypeInput--select MultiTypeInput--fixedValueInput Select--main bp3-fill"
        >
          <div
            class="bp3-popover-target"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="appdApplication"
                placeholder="cv.healthSource.connectors.AppDynamics.applicationPlaceholder"
                style="padding-right: 0px;"
                type="text"
                value=""
              />
              <span
                class="bp3-input-action"
              >
                <span
                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                  icon="chevron-down"
                >
                  <svg
                    data-icon="chevron-down"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                  >
                    <desc>
                      chevron-down
                    </desc>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
        <span
          class="bp3-popover-wrapper MultiTypeInput--wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="MultiTypeInput--btn MultiTypeInput--FIXED"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="fixed-input"
              >
                <svg
                  height="12"
                  viewBox="0 0 9 9"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppDApplications should render AppDApplications with multiInputType Select 2`] = `
<div>
  <div
    class="bp3-form-group applicationDropdown"
  >
    <label
      class="bp3-label"
      for="appdApplication"
    >
      cv.healthSource.connectors.AppDynamics.applicationLabel
       
      <span
        class="bp3-text-muted"
      />
    </label>
    <div
      class="bp3-form-content"
    >
      <div
        class="Layout--horizontal StyledProps--main MultiTypeInput--main"
      >
        <div
          class="bp3-popover-wrapper MultiTypeInput--select MultiTypeInput--fixedValueInput Select--main bp3-fill"
        >
          <div
            class="bp3-popover-target"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="appdApplication"
                placeholder="loading"
                style="padding-right: 0px;"
                type="text"
                value=""
              />
              <span
                class="bp3-input-action"
              >
                <span
                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                  icon="chevron-down"
                >
                  <svg
                    data-icon="chevron-down"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                  >
                    <desc>
                      chevron-down
                    </desc>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
        <span
          class="bp3-popover-wrapper MultiTypeInput--wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="MultiTypeInput--btn MultiTypeInput--FIXED"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="fixed-input"
              >
                <svg
                  height="12"
                  viewBox="0 0 9 9"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppDApplications should render AppDApplications with multiInputType Select 3`] = `
<div>
  <div
    class="bp3-form-group applicationDropdown"
  >
    <label
      class="bp3-label"
      for="appdApplication"
    >
      cv.healthSource.connectors.AppDynamics.applicationLabel
       
      <span
        class="bp3-text-muted"
      />
    </label>
    <div
      class="bp3-form-content"
    >
      <div
        class="Layout--horizontal StyledProps--main MultiTypeInput--main"
      >
        <div
          class="bp3-popover-wrapper MultiTypeInput--select MultiTypeInput--fixedValueInput Select--main bp3-fill"
        >
          <div
            class="bp3-popover-target"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="appdApplication"
                placeholder="cv.healthSource.connectors.AppDynamics.applicationPlaceholder"
                style="padding-right: 0px;"
                type="text"
                value=""
              />
              <span
                class="bp3-input-action"
              >
                <span
                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                  icon="chevron-down"
                >
                  <svg
                    data-icon="chevron-down"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                  >
                    <desc>
                      chevron-down
                    </desc>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
        <span
          class="bp3-popover-wrapper MultiTypeInput--wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="MultiTypeInput--btn MultiTypeInput--FIXED"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="fixed-input"
              >
                <svg
                  height="12"
                  viewBox="0 0 9 9"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppDApplications should render AppDApplications with normal Select 1`] = `
<div>
  <div
    class="bp3-form-group applicationDropdown"
  >
    <label
      class="bp3-label"
      for="appdApplication"
    >
      cv.healthSource.connectors.AppDynamics.applicationLabel
       
      <span
        class="bp3-text-muted"
      />
    </label>
    <div
      class="bp3-form-content"
    >
      <div
        class="bp3-popover-wrapper Select--main bp3-fill"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class="bp3-input-group"
          >
            <span
              class="bp3-input-left-container"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main iconButton StyledProps--margin-right-xsmall Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-search StyledProps--main"
                  icon="search"
                >
                  <svg
                    data-icon="search"
                    height="15"
                    viewBox="0 0 16 16"
                    width="15"
                  >
                    <desc>
                      search
                    </desc>
                    <path
                      d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
            <input
              autocomplete="off"
              class="bp3-input"
              name="appdApplication"
              placeholder="- cv.healthSource.connectors.AppDynamics.applicationPlaceholder -"
              style="padding-left: 0px; padding-right: 0px;"
              type="text"
              value=""
            />
            <span
              class="bp3-input-action"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main iconButton StyledProps--margin-right-xsmall Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-cross StyledProps--main"
                  icon="cross"
                >
                  <svg
                    data-icon="cross"
                    height="15"
                    viewBox="0 0 16 16"
                    width="15"
                  >
                    <desc>
                      cross
                    </desc>
                    <path
                      d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppDApplications should render AppDApplications with normal Select 2`] = `
<div>
  <div
    class="bp3-form-group applicationDropdown"
  >
    <label
      class="bp3-label"
      for="appdApplication"
    >
      cv.healthSource.connectors.AppDynamics.applicationLabel
       
      <span
        class="bp3-text-muted"
      />
    </label>
    <div
      class="bp3-form-content"
    >
      <div
        class="bp3-popover-wrapper Select--main bp3-fill"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class="bp3-input-group"
          >
            <span
              class="bp3-input-left-container"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main iconButton StyledProps--margin-right-xsmall Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-search StyledProps--main"
                  icon="search"
                >
                  <svg
                    data-icon="search"
                    height="15"
                    viewBox="0 0 16 16"
                    width="15"
                  >
                    <desc>
                      search
                    </desc>
                    <path
                      d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
            <input
              autocomplete="off"
              class="bp3-input"
              name="appdApplication"
              placeholder="- loading -"
              style="padding-left: 0px; padding-right: 0px;"
              type="text"
              value=""
            />
            <span
              class="bp3-input-action"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main iconButton StyledProps--margin-right-xsmall Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-cross StyledProps--main"
                  icon="cross"
                >
                  <svg
                    data-icon="cross"
                    height="15"
                    viewBox="0 0 16 16"
                    width="15"
                  >
                    <desc>
                      cross
                    </desc>
                    <path
                      d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppDApplications should render AppDApplications with normal Select 3`] = `
<div>
  <div
    class="bp3-form-group applicationDropdown"
  >
    <label
      class="bp3-label"
      for="appdApplication"
    >
      cv.healthSource.connectors.AppDynamics.applicationLabel
       
      <span
        class="bp3-text-muted"
      />
    </label>
    <div
      class="bp3-form-content"
    >
      <div
        class="bp3-popover-wrapper Select--main bp3-fill"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class="bp3-input-group"
          >
            <span
              class="bp3-input-left-container"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main iconButton StyledProps--margin-right-xsmall Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-search StyledProps--main"
                  icon="search"
                >
                  <svg
                    data-icon="search"
                    height="15"
                    viewBox="0 0 16 16"
                    width="15"
                  >
                    <desc>
                      search
                    </desc>
                    <path
                      d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
            <input
              autocomplete="off"
              class="bp3-input"
              name="appdApplication"
              placeholder="- cv.healthSource.connectors.AppDynamics.applicationPlaceholder -"
              style="padding-left: 0px; padding-right: 0px;"
              type="text"
              value="formikAppDynamicsValue"
            />
            <span
              class="bp3-input-action"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main iconButton StyledProps--margin-right-xsmall Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-cross StyledProps--main"
                  icon="cross"
                >
                  <svg
                    data-icon="cross"
                    height="15"
                    viewBox="0 0 16 16"
                    width="15"
                  >
                    <desc>
                      cross
                    </desc>
                    <path
                      d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
